@@ -1,3 +1,9 @@
+2006-12-28  Inge Wallin  <inge@lysator.liu.se>
+
+	Fix ugly wrap around in charttype selection in the wizard.
+	* dialogs/KCWizardCharttype.cc (constructor): Grid is 3x3, not 3x4
+	(incPos): Wrap at 3 instead of 4
+
 2006-12-23  Inge Wallin  <inge@lysator.liu.se>
 
 	Fourth step, part 5b of wish 117960 (now finished)
